[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/editor/Padding.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/editor/ButtonContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/editor/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/icons/arrow-go-forward-line.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/save-line.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/folder-download-line.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/arrow-go-back-line.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/paint-fill.png" type="Texture" id=8]
[ext_resource path="res://src/editor/EditorInterface.gd" type="Script" id=9]
[ext_resource path="res://src/editor/Slider.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/editor/TypeSelector.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/editor/AlignmentModeSelector.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/editor/PigmentationModeSelector.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/icons/file-add-line.png" type="Texture" id=14]
[ext_resource path="res://src/editor/NewDialog.tscn" type="PackedScene" id=15]

[node name="EditorInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="TopPanel" type="Panel" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Padding1" parent="TopPanel/HBoxContainer" instance=ExtResource( 1 )]

[node name="New" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 19.0
margin_right = 44.0

[node name="Button" parent="TopPanel/HBoxContainer/New" instance=ExtResource( 3 )]
icon = ExtResource( 14 )

[node name="Save" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 48.0
margin_right = 73.0

[node name="Button" parent="TopPanel/HBoxContainer/Save" instance=ExtResource( 3 )]
icon = ExtResource( 5 )

[node name="Load" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 77.0
margin_right = 102.0

[node name="Button" parent="TopPanel/HBoxContainer/Load" instance=ExtResource( 3 )]
icon = ExtResource( 6 )

[node name="Padding2" parent="TopPanel/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 106.0
margin_right = 121.0

[node name="Undo" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 125.0
margin_right = 150.0

[node name="Button" parent="TopPanel/HBoxContainer/Undo" instance=ExtResource( 3 )]
icon = ExtResource( 7 )

[node name="Redo" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 154.0
margin_right = 179.0

[node name="Button" parent="TopPanel/HBoxContainer/Redo" instance=ExtResource( 3 )]
icon = ExtResource( 4 )

[node name="Padding3" parent="TopPanel/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 183.0
margin_right = 198.0

[node name="Fill" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 202.0
margin_right = 227.0

[node name="Button" parent="TopPanel/HBoxContainer/Fill" instance=ExtResource( 3 )]
icon = ExtResource( 8 )

[node name="Padding4" parent="TopPanel/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 231.0
margin_right = 246.0

[node name="Label" type="Label" parent="TopPanel/HBoxContainer"]
margin_left = 250.0
margin_top = 13.0
margin_right = 321.0
margin_bottom = 27.0
text = "Brush size:"

[node name="Size" parent="TopPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 325.0
margin_right = 399.0

[node name="SpinBox" type="SpinBox" parent="TopPanel/HBoxContainer/Size"]
margin_top = 8.0
margin_right = 74.0
margin_bottom = 32.0
min_value = 1.0
max_value = 1000.0
value = 10.0
suffix = "px"

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
margin_right = 100.0
margin_bottom = 40.0

[node name="Padding1" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]

[node name="ModeSelectionContainer" parent="BottomPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 19.0
margin_right = 114.0

[node name="ModeSelectionButton" type="OptionButton" parent="BottomPanel/HBoxContainer/ModeSelectionContainer"]
margin_top = 10.0
margin_right = 95.0
margin_bottom = 30.0
text = "Alignment"
items = [ "Alignment", null, false, 0, null, "Size", null, false, 1, null, "Type", null, false, 2, null, "Distorsion", null, false, 3, null, "Pigmentation Mode", null, false, 4, null, "Alignment Mode", null, false, 5, null ]
selected = 0

[node name="Padding2" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 118.0
margin_right = 133.0

[node name="SizeSlider" parent="BottomPanel/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 137.0
margin_right = 295.0
margin_bottom = 40.0

[node name="DistorsionSlider" parent="BottomPanel/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 299.0
margin_right = 457.0
margin_bottom = 40.0

[node name="AMSelectorContainer" parent="BottomPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 461.0
margin_right = 519.0

[node name="AlignmentModeSelector" parent="BottomPanel/HBoxContainer/AMSelectorContainer" instance=ExtResource( 12 )]
margin_top = 10.0
margin_right = 58.0
margin_bottom = 30.0

[node name="PMSelectorContainer" parent="BottomPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 523.0
margin_right = 580.0

[node name="PigmentationModeSelector" parent="BottomPanel/HBoxContainer/PMSelectorContainer" instance=ExtResource( 13 )]
margin_top = 10.0
margin_right = 57.0
margin_bottom = 30.0

[node name="TypeSelectorContainer" parent="BottomPanel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 584.0
margin_right = 613.0

[node name="TypeSelector" parent="BottomPanel/HBoxContainer/TypeSelectorContainer" instance=ExtResource( 11 )]
margin_top = 10.0
margin_bottom = 30.0

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 61.0
margin_top = 89.0
margin_right = 419.0
margin_bottom = 474.0
window_title = "Save Texture"
resizable = true
access = 2
filters = PoolStringArray( "*.png; PNG images" )

[node name="NewDialog" parent="." instance=ExtResource( 15 )]

[node name="LoadDialog" type="FileDialog" parent="."]
visible = true
margin_left = 62.0
margin_top = 90.0
margin_right = 419.0
margin_bottom = 477.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png; PNG images" )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 154.0
margin_top = 231.0
margin_right = 354.0
margin_bottom = 323.0
dialog_text = "Current texture has unsaved changes, are you sure you want to discard them?"
dialog_autowrap = true
